--- a/output/latex/goodwill_to_equity_lagged_ew_all_Fama-French_3-Factor.tex
+++ b/output/latex/goodwill_to_equity_lagged_ew_all_Fama-French_3-Factor.tex
@@ -6,16 +6,16 @@
 \hline
                & Fama-French 3-Factor  \\
 \hline
-const          & -0.0014               \\
-               & (0.0013)              \\
-mkt\_rf        & 0.1321***             \\
-               & (0.0312)              \\
-smb            & -0.1012               \\
-               & (0.0615)              \\
-hml            & -0.0108               \\
-               & (0.0520)              \\
-R-squared      & 0.0641                \\
-R-squared Adj. & 0.0514                \\
+const          & -0.0004               \\
+               & (0.0010)              \\
+mkt\_rf        & -0.1069***            \\
+               & (0.0295)              \\
+smb            & 0.0846*               \\
+               & (0.0502)              \\
+hml            & 0.0483                \\
+               & (0.0349)              \\
+R-squared      & 0.0762                \\
+R-squared Adj. & 0.0640                \\
 \hline
 \end{tabular}
 \end{center}
