--- a/output/latex/goodwill_to_equity_lagged_ew_all_Fama-French_5_+_Momentum.tex
+++ b/output/latex/goodwill_to_equity_lagged_ew_all_Fama-French_5_+_Momentum.tex
@@ -6,22 +6,22 @@
 \hline
                & Fama-French 5 + Momentum  \\
 \hline
-const          & -0.0017                   \\
-               & (0.0014)                  \\
-mkt\_rf        & 0.1231***                 \\
-               & (0.0320)                  \\
-smb            & -0.0646                   \\
-               & (0.0649)                  \\
-hml            & -0.0324                   \\
-               & (0.1044)                  \\
-rmw            & 0.1177*                   \\
-               & (0.0678)                  \\
-cma            & -0.0019                   \\
-               & (0.1371)                  \\
-mom            & -0.0319                   \\
-               & (0.0346)                  \\
-R-squared      & 0.0775                    \\
-R-squared Adj. & 0.0522                    \\
+const          & 0.0002                    \\
+               & (0.0010)                  \\
+mkt\_rf        & -0.1103***                \\
+               & (0.0295)                  \\
+smb            & 0.0267                    \\
+               & (0.0545)                  \\
+hml            & 0.0889                    \\
+               & (0.0570)                  \\
+rmw            & -0.1816**                 \\
+               & (0.0814)                  \\
+cma            & -0.0337                   \\
+               & (0.0829)                  \\
+mom            & 0.0231                    \\
+               & (0.0313)                  \\
+R-squared      & 0.1157                    \\
+R-squared Adj. & 0.0920                    \\
 \hline
 \end{tabular}
 \end{center}
