--- a/output/latex/goodwill_to_equity_lagged_ew_big_Fama-French_3-Factor.tex
+++ b/output/latex/goodwill_to_equity_lagged_ew_big_Fama-French_3-Factor.tex
@@ -6,16 +6,16 @@
 \hline
                & Fama-French 3-Factor  \\
 \hline
-const          & -0.0024               \\
-               & (0.0015)              \\
-mkt\_rf        & 0.0169                \\
-               & (0.0376)              \\
-smb            & -0.1116               \\
-               & (0.0691)              \\
-hml            & 0.0532                \\
-               & (0.0543)              \\
-R-squared      & 0.0136                \\
-R-squared Adj. & 0.0002                \\
+const          & 0.0007                \\
+               & (0.0013)              \\
+mkt\_rf        & -0.0030               \\
+               & (0.0332)              \\
+smb            & 0.1033*               \\
+               & (0.0581)              \\
+hml            & 0.0053                \\
+               & (0.0389)              \\
+R-squared      & 0.0186                \\
+R-squared Adj. & 0.0056                \\
 \hline
 \end{tabular}
 \end{center}
