--- a/output/latex/goodwill_to_equity_lagged_ew_big_Fama-French_5_+_Momentum.tex
+++ b/output/latex/goodwill_to_equity_lagged_ew_big_Fama-French_5_+_Momentum.tex
@@ -6,22 +6,22 @@
 \hline
                & Fama-French 5 + Momentum  \\
 \hline
-const          & -0.0026                   \\
-               & (0.0016)                  \\
-mkt\_rf        & 0.0130                    \\
-               & (0.0398)                  \\
-smb            & -0.0987                   \\
-               & (0.0727)                  \\
-hml            & 0.0115                    \\
-               & (0.1080)                  \\
-rmw            & 0.0468                    \\
-               & (0.0635)                  \\
-cma            & 0.0665                    \\
-               & (0.1380)                  \\
-mom            & -0.0339                   \\
-               & (0.0403)                  \\
-R-squared      & 0.0190                    \\
-R-squared Adj. & -0.0078                   \\
+const          & 0.0012                    \\
+               & (0.0013)                  \\
+mkt\_rf        & 0.0009                    \\
+               & (0.0354)                  \\
+smb            & 0.0786                    \\
+               & (0.0599)                  \\
+hml            & 0.0921*                   \\
+               & (0.0549)                  \\
+rmw            & -0.0728                   \\
+               & (0.0642)                  \\
+cma            & -0.1700**                 \\
+               & (0.0690)                  \\
+mom            & 0.0499                    \\
+               & (0.0316)                  \\
+R-squared      & 0.0461                    \\
+R-squared Adj. & 0.0206                    \\
 \hline
 \end{tabular}
 \end{center}
