--- a/output/latex/goodwill_to_equity_lagged_ew_small_CAPM.tex
+++ b/output/latex/goodwill_to_equity_lagged_ew_small_CAPM.tex
@@ -6,12 +6,12 @@
 \hline
                & CAPM      \\
 \hline
-const          & -0.0026*  \\
+const          & 0.0004    \\
                & (0.0016)  \\
-mkt\_rf        & 0.0625    \\
-               & (0.0431)  \\
-R-squared      & 0.0161    \\
-R-squared Adj. & 0.0117    \\
+mkt\_rf        & -0.0542   \\
+               & (0.0399)  \\
+R-squared      & 0.0130    \\
+R-squared Adj. & 0.0086    \\
 \hline
 \end{tabular}
 \end{center}
