--- a/output/latex/goodwill_to_equity_lagged_ew_small_Fama-French_3-Factor.tex
+++ b/output/latex/goodwill_to_equity_lagged_ew_small_Fama-French_3-Factor.tex
@@ -6,16 +6,16 @@
 \hline
                & Fama-French 3-Factor  \\
 \hline
-const          & -0.0026*              \\
-               & (0.0015)              \\
-mkt\_rf        & 0.0696*               \\
-               & (0.0419)              \\
-smb            & -0.0233               \\
-               & (0.0649)              \\
-hml            & -0.0155               \\
-               & (0.0733)              \\
-R-squared      & 0.0175                \\
-R-squared Adj. & 0.0042                \\
+const          & 0.0005                \\
+               & (0.0016)              \\
+mkt\_rf        & -0.0697               \\
+               & (0.0451)              \\
+smb            & 0.0387                \\
+               & (0.0620)              \\
+hml            & 0.0714                \\
+               & (0.0619)              \\
+R-squared      & 0.0274                \\
+R-squared Adj. & 0.0142                \\
 \hline
 \end{tabular}
 \end{center}
