--- a/output/latex/goodwill_to_equity_lagged_ew_small_Fama-French_5-Factor.tex
+++ b/output/latex/goodwill_to_equity_lagged_ew_small_Fama-French_5-Factor.tex
@@ -6,20 +6,20 @@
 \hline
                & Fama-French 5-Factor  \\
 \hline
-const          & -0.0027*              \\
-               & (0.0015)              \\
-mkt\_rf        & 0.0800*               \\
-               & (0.0446)              \\
-smb            & -0.0540               \\
-               & (0.0711)              \\
-hml            & -0.0514               \\
-               & (0.1034)              \\
-rmw            & -0.0932               \\
-               & (0.0916)              \\
-cma            & 0.1213                \\
-               & (0.1443)              \\
-R-squared      & 0.0309                \\
-R-squared Adj. & 0.0088                \\
+const          & 0.0004                \\
+               & (0.0016)              \\
+mkt\_rf        & -0.0676               \\
+               & (0.0439)              \\
+smb            & 0.0383                \\
+               & (0.0643)              \\
+hml            & 0.0587                \\
+               & (0.0595)              \\
+rmw            & -0.0030               \\
+               & (0.0780)              \\
+cma            & 0.0383                \\
+               & (0.0994)              \\
+R-squared      & 0.0282                \\
+R-squared Adj. & 0.0060                \\
 \hline
 \end{tabular}
 \end{center}
