--- a/output/latex/goodwill_to_equity_lagged_vw_all_Fama-French_3-Factor.tex
+++ b/output/latex/goodwill_to_equity_lagged_vw_all_Fama-French_3-Factor.tex
@@ -6,16 +6,16 @@
 \hline
                & Fama-French 3-Factor  \\
 \hline
-const          & -0.0039*              \\
-               & (0.0022)              \\
-mkt\_rf        & -0.0066               \\
-               & (0.0493)              \\
-smb            & 0.0423                \\
-               & (0.0882)              \\
-hml            & -0.0017               \\
-               & (0.0625)              \\
-R-squared      & 0.0014                \\
-R-squared Adj. & -0.0121               \\
+const          & 0.0015                \\
+               & (0.0021)              \\
+mkt\_rf        & 0.0342                \\
+               & (0.0555)              \\
+smb            & -0.1215*              \\
+               & (0.0689)              \\
+hml            & -0.0525               \\
+               & (0.0649)              \\
+R-squared      & 0.0191                \\
+R-squared Adj. & 0.0058                \\
 \hline
 \end{tabular}
 \end{center}
