--- a/output/latex/goodwill_to_equity_lagged_vw_all_Fama-French_5-Factor.tex
+++ b/output/latex/goodwill_to_equity_lagged_vw_all_Fama-French_5-Factor.tex
@@ -6,20 +6,20 @@
 \hline
                & Fama-French 5-Factor  \\
 \hline
-const          & -0.0041*              \\
-               & (0.0023)              \\
-mkt\_rf        & -0.0046               \\
-               & (0.0519)              \\
-smb            & 0.0587                \\
-               & (0.1005)              \\
-hml            & -0.0116               \\
-               & (0.0807)              \\
-rmw            & 0.0469                \\
-               & (0.1149)              \\
-cma            & 0.0157                \\
-               & (0.1290)              \\
-R-squared      & 0.0025                \\
-R-squared Adj. & -0.0203               \\
+const          & 0.0016                \\
+               & (0.0021)              \\
+mkt\_rf        & 0.0328                \\
+               & (0.0554)              \\
+smb            & -0.1167               \\
+               & (0.0792)              \\
+hml            & -0.0423               \\
+               & (0.0787)              \\
+rmw            & 0.0164                \\
+               & (0.1046)              \\
+cma            & -0.0350               \\
+               & (0.0748)              \\
+R-squared      & 0.0197                \\
+R-squared Adj. & -0.0026               \\
 \hline
 \end{tabular}
 \end{center}
