--- a/output/latex/goodwill_to_equity_lagged_vw_small_CAPM.tex
+++ b/output/latex/goodwill_to_equity_lagged_vw_small_CAPM.tex
@@ -4,14 +4,14 @@
 \begin{center}
 \begin{tabular}{ll}
 \hline
-               & CAPM       \\
+               & CAPM      \\
 \hline
-const          & -0.0004    \\
-               & (0.0015)   \\
-mkt\_rf        & 0.1227***  \\
-               & (0.0338)   \\
-R-squared      & 0.0567     \\
-R-squared Adj. & 0.0524     \\
+const          & -0.0022   \\
+               & (0.0015)  \\
+mkt\_rf        & -0.0565   \\
+               & (0.0418)  \\
+R-squared      & 0.0129    \\
+R-squared Adj. & 0.0084    \\
 \hline
 \end{tabular}
 \end{center}
