--- a/output/latex/goodwill_to_equity_lagged_vw_small_Fama-French_3-Factor.tex
+++ b/output/latex/goodwill_to_equity_lagged_vw_small_Fama-French_3-Factor.tex
@@ -6,16 +6,16 @@
 \hline
                & Fama-French 3-Factor  \\
 \hline
-const          & -0.0005               \\
-               & (0.0014)              \\
-mkt\_rf        & 0.1206***             \\
-               & (0.0335)              \\
-smb            & -0.0164               \\
-               & (0.0624)              \\
-hml            & 0.0633                \\
-               & (0.0680)              \\
-R-squared      & 0.0635                \\
-R-squared Adj. & 0.0508                \\
+const          & -0.0021               \\
+               & (0.0015)              \\
+mkt\_rf        & -0.0721*              \\
+               & (0.0416)              \\
+smb            & 0.0635                \\
+               & (0.0721)              \\
+hml            & 0.0121                \\
+               & (0.0653)              \\
+R-squared      & 0.0183                \\
+R-squared Adj. & 0.0050                \\
 \hline
 \end{tabular}
 \end{center}
