--- a/output/latex/goodwill_to_equity_lagged_vw_small_Fama-French_5_+_Momentum.tex
+++ b/output/latex/goodwill_to_equity_lagged_vw_small_Fama-French_5_+_Momentum.tex
@@ -6,22 +6,22 @@
 \hline
                & Fama-French 5 + Momentum  \\
 \hline
-const          & -0.0010                   \\
-               & (0.0015)                  \\
-mkt\_rf        & 0.1220***                 \\
-               & (0.0400)                  \\
-smb            & 0.0068                    \\
-               & (0.0758)                  \\
-hml            & -0.0244                   \\
-               & (0.1081)                  \\
-rmw            & 0.0798                    \\
-               & (0.0856)                  \\
-cma            & 0.1714                    \\
-               & (0.1411)                  \\
-mom            & -0.0497                   \\
-               & (0.0366)                  \\
-R-squared      & 0.0838                    \\
-R-squared Adj. & 0.0586                    \\
+const          & -0.0027*                  \\
+               & (0.0016)                  \\
+mkt\_rf        & -0.0500                   \\
+               & (0.0450)                  \\
+smb            & 0.0929                    \\
+               & (0.0745)                  \\
+hml            & -0.0237                   \\
+               & (0.0685)                  \\
+rmw            & 0.0821                    \\
+               & (0.0800)                  \\
+cma            & 0.1137                    \\
+               & (0.1048)                  \\
+mom            & 0.0307                    \\
+               & (0.0327)                  \\
+R-squared      & 0.0314                    \\
+R-squared Adj. & 0.0047                    \\
 \hline
 \end{tabular}
 \end{center}
