--- a/output/latex/goodwill_to_market_cap_lagged_ew_big_Fama-French_3-Factor.tex
+++ b/output/latex/goodwill_to_market_cap_lagged_ew_big_Fama-French_3-Factor.tex
@@ -6,16 +6,16 @@
 \hline
                & Fama-French 3-Factor  \\
 \hline
-const          & -0.0025               \\
+const          & -0.0002               \\
                & (0.0019)              \\
-mkt\_rf        & 0.1302***             \\
-               & (0.0482)              \\
-smb            & -0.1454*              \\
-               & (0.0803)              \\
-hml            & 0.5336***             \\
-               & (0.0806)              \\
-R-squared      & 0.3429                \\
-R-squared Adj. & 0.3340                \\
+mkt\_rf        & -0.0962**             \\
+               & (0.0489)              \\
+smb            & 0.1718**              \\
+               & (0.0856)              \\
+hml            & -0.5336***            \\
+               & (0.0763)              \\
+R-squared      & 0.2912                \\
+R-squared Adj. & 0.2818                \\
 \hline
 \end{tabular}
 \end{center}
