--- a/output/latex/goodwill_to_market_cap_lagged_ew_big_Fama-French_5-Factor.tex
+++ b/output/latex/goodwill_to_market_cap_lagged_ew_big_Fama-French_5-Factor.tex
@@ -6,20 +6,20 @@
 \hline
                & Fama-French 5-Factor  \\
 \hline
-const          & -0.0032*              \\
-               & (0.0017)              \\
-mkt\_rf        & 0.1580***             \\
-               & (0.0434)              \\
-smb            & -0.1306               \\
-               & (0.0923)              \\
-hml            & 0.4180***             \\
-               & (0.0887)              \\
-rmw            & 0.0247                \\
-               & (0.0953)              \\
-cma            & 0.2926**              \\
-               & (0.1186)              \\
-R-squared      & 0.3657                \\
-R-squared Adj. & 0.3512                \\
+const          & 0.0006                \\
+               & (0.0018)              \\
+mkt\_rf        & -0.1163**             \\
+               & (0.0463)              \\
+smb            & 0.1200                \\
+               & (0.0993)              \\
+hml            & -0.4447***            \\
+               & (0.0858)              \\
+rmw            & -0.1382               \\
+               & (0.1138)              \\
+cma            & -0.1979*              \\
+               & (0.1151)              \\
+R-squared      & 0.3063                \\
+R-squared Adj. & 0.2909                \\
 \hline
 \end{tabular}
 \end{center}
