--- a/output/latex/goodwill_to_market_cap_lagged_ew_small_CAPM.tex
+++ b/output/latex/goodwill_to_market_cap_lagged_ew_small_CAPM.tex
@@ -4,14 +4,14 @@
 \begin{center}
 \begin{tabular}{ll}
 \hline
-               & CAPM       \\
+               & CAPM        \\
 \hline
-const          & 0.0028     \\
-               & (0.0018)   \\
-mkt\_rf        & 0.2055***  \\
-               & (0.0520)   \\
-R-squared      & 0.1074     \\
-R-squared Adj. & 0.1034     \\
+const          & -0.0069***  \\
+               & (0.0024)    \\
+mkt\_rf        & 0.0268      \\
+               & (0.0821)    \\
+R-squared      & 0.0020      \\
+R-squared Adj. & -0.0025     \\
 \hline
 \end{tabular}
 \end{center}
