--- a/output/latex/goodwill_to_market_cap_lagged_ew_small_Fama-French_5_+_Momentum.tex
+++ b/output/latex/goodwill_to_market_cap_lagged_ew_small_Fama-French_5_+_Momentum.tex
@@ -6,22 +6,22 @@
 \hline
                & Fama-French 5 + Momentum  \\
 \hline
-const          & 0.0026**                  \\
-               & (0.0013)                  \\
-mkt\_rf        & 0.1588***                 \\
-               & (0.0368)                  \\
-smb            & -0.3970***                \\
-               & (0.0591)                  \\
-hml            & 0.2177***                 \\
-               & (0.0811)                  \\
-rmw            & 0.0032                    \\
-               & (0.0704)                  \\
-cma            & 0.0841                    \\
-               & (0.0913)                  \\
-mom            & -0.3339***                \\
-               & (0.0399)                  \\
-R-squared      & 0.5307                    \\
-R-squared Adj. & 0.5178                    \\
+const          & -0.0065***                \\
+               & (0.0021)                  \\
+mkt\_rf        & 0.0454                    \\
+               & (0.0772)                  \\
+smb            & -0.1327                   \\
+               & (0.0855)                  \\
+hml            & 0.2373***                 \\
+               & (0.0883)                  \\
+rmw            & -0.1615                   \\
+               & (0.1139)                  \\
+cma            & -0.1622                   \\
+               & (0.1404)                  \\
+mom            & 0.0862**                  \\
+               & (0.0387)                  \\
+R-squared      & 0.0523                    \\
+R-squared Adj. & 0.0262                    \\
 \hline
 \end{tabular}
 \end{center}
