--- a/output/latex/goodwill_to_market_cap_lagged_vw_all_CAPM.tex
+++ b/output/latex/goodwill_to_market_cap_lagged_vw_all_CAPM.tex
@@ -6,12 +6,12 @@
 \hline
                & CAPM      \\
 \hline
-const          & -0.0055*  \\
+const          & 0.0016    \\
                & (0.0032)  \\
-mkt\_rf        & 0.1543    \\
-               & (0.1038)  \\
-R-squared      & 0.0269    \\
-R-squared Adj. & 0.0226    \\
+mkt\_rf        & 0.0454    \\
+               & (0.0944)  \\
+R-squared      & 0.0025    \\
+R-squared Adj. & -0.0020   \\
 \hline
 \end{tabular}
 \end{center}
