--- a/output/latex/goodwill_to_market_cap_lagged_vw_all_Fama-French_3-Factor.tex
+++ b/output/latex/goodwill_to_market_cap_lagged_vw_all_Fama-French_3-Factor.tex
@@ -6,16 +6,16 @@
 \hline
                & Fama-French 3-Factor  \\
 \hline
-const          & -0.0052**             \\
-               & (0.0022)              \\
-mkt\_rf        & 0.0924                \\
-               & (0.0715)              \\
-smb            & -0.0549               \\
-               & (0.0899)              \\
-hml            & 0.7743***             \\
-               & (0.1018)              \\
-R-squared      & 0.3548                \\
-R-squared Adj. & 0.3461                \\
+const          & 0.0016                \\
+               & (0.0031)              \\
+mkt\_rf        & 0.0289                \\
+               & (0.1012)              \\
+smb            & 0.0167                \\
+               & (0.1133)              \\
+hml            & 0.1340                \\
+               & (0.0844)              \\
+R-squared      & 0.0129                \\
+R-squared Adj. & -0.0005               \\
 \hline
 \end{tabular}
 \end{center}
