--- a/output/latex/goodwill_to_market_cap_lagged_vw_small_CAPM.tex
+++ b/output/latex/goodwill_to_market_cap_lagged_vw_small_CAPM.tex
@@ -6,12 +6,12 @@
 \hline
                & CAPM       \\
 \hline
-const          & 0.0021     \\
-               & (0.0021)   \\
-mkt\_rf        & 0.2059***  \\
-               & (0.0629)   \\
-R-squared      & 0.0799     \\
-R-squared Adj. & 0.0757     \\
+const          & -0.0064**  \\
+               & (0.0026)   \\
+mkt\_rf        & 0.0459     \\
+               & (0.0889)   \\
+R-squared      & 0.0042     \\
+R-squared Adj. & -0.0002    \\
 \hline
 \end{tabular}
 \end{center}
