--- a/output/latex/goodwill_to_market_cap_lagged_vw_small_Fama-French_3-Factor.tex
+++ b/output/latex/goodwill_to_market_cap_lagged_vw_small_Fama-French_3-Factor.tex
@@ -6,16 +6,16 @@
 \hline
                & Fama-French 3-Factor  \\
 \hline
-const          & 0.0014                \\
-               & (0.0018)              \\
-mkt\_rf        & 0.2708***             \\
-               & (0.0481)              \\
-smb            & -0.4763***            \\
-               & (0.0821)              \\
-hml            & 0.5119***             \\
-               & (0.0796)              \\
-R-squared      & 0.3555                \\
-R-squared Adj. & 0.3467                \\
+const          & -0.0066***            \\
+               & (0.0026)              \\
+mkt\_rf        & 0.0627                \\
+               & (0.0906)              \\
+smb            & -0.1025               \\
+               & (0.1029)              \\
+hml            & 0.0677                \\
+               & (0.0737)              \\
+R-squared      & 0.0116                \\
+R-squared Adj. & -0.0018               \\
 \hline
 \end{tabular}
 \end{center}
