--- a/output/latex/goodwill_to_market_cap_lagged_vw_small_Fama-French_5-Factor.tex
+++ b/output/latex/goodwill_to_market_cap_lagged_vw_small_Fama-French_5-Factor.tex
@@ -6,20 +6,20 @@
 \hline
                & Fama-French 5-Factor  \\
 \hline
-const          & 0.0007                \\
-               & (0.0017)              \\
-mkt\_rf        & 0.2798***             \\
-               & (0.0458)              \\
-smb            & -0.4194***            \\
-               & (0.0913)              \\
-hml            & 0.4674***             \\
-               & (0.0842)              \\
-rmw            & 0.1596                \\
-               & (0.1143)              \\
-cma            & 0.0760                \\
-               & (0.1239)              \\
-R-squared      & 0.3642                \\
-R-squared Adj. & 0.3497                \\
+const          & -0.0062***            \\
+               & (0.0024)              \\
+mkt\_rf        & 0.0537                \\
+               & (0.0856)              \\
+smb            & -0.1253               \\
+               & (0.1095)              \\
+hml            & 0.1051                \\
+               & (0.0844)              \\
+rmw            & -0.0688               \\
+               & (0.1374)              \\
+cma            & -0.0870               \\
+               & (0.1581)              \\
+R-squared      & 0.0145                \\
+R-squared Adj. & -0.0080               \\
 \hline
 \end{tabular}
 \end{center}
