--- a/output/latex/goodwill_to_sales_lagged_ew_all_Fama-French_3-Factor.tex
+++ b/output/latex/goodwill_to_sales_lagged_ew_all_Fama-French_3-Factor.tex
@@ -6,16 +6,16 @@
 \hline
                & Fama-French 3-Factor  \\
 \hline
-const          & -0.0053***            \\
-               & (0.0020)              \\
-mkt\_rf        & 0.0588                \\
-               & (0.0591)              \\
-smb            & -0.0405               \\
-               & (0.0894)              \\
-hml            & -0.1913***            \\
-               & (0.0545)              \\
-R-squared      & 0.0614                \\
-R-squared Adj. & 0.0490                \\
+const          & 0.0035**              \\
+               & (0.0015)              \\
+mkt\_rf        & 0.0035                \\
+               & (0.0411)              \\
+smb            & -0.0466               \\
+               & (0.0489)              \\
+hml            & 0.1954***             \\
+               & (0.0477)              \\
+R-squared      & 0.0896                \\
+R-squared Adj. & 0.0776                \\
 \hline
 \end{tabular}
 \end{center}
