--- a/output/latex/goodwill_to_sales_lagged_ew_big_Fama-French_3-Factor.tex
+++ b/output/latex/goodwill_to_sales_lagged_ew_big_Fama-French_3-Factor.tex
@@ -6,16 +6,16 @@
 \hline
                & Fama-French 3-Factor  \\
 \hline
-const          & -0.0051***            \\
-               & (0.0017)              \\
-mkt\_rf        & -0.0153               \\
-               & (0.0293)              \\
-smb            & -0.0082               \\
-               & (0.0722)              \\
-hml            & 0.0148                \\
-               & (0.0599)              \\
-R-squared      & 0.0012                \\
-R-squared Adj. & -0.0123               \\
+const          & 0.0030**              \\
+               & (0.0014)              \\
+mkt\_rf        & 0.0525                \\
+               & (0.0403)              \\
+smb            & -0.0150               \\
+               & (0.0555)              \\
+hml            & 0.1384**              \\
+               & (0.0554)              \\
+R-squared      & 0.0568                \\
+R-squared Adj. & 0.0443                \\
 \hline
 \end{tabular}
 \end{center}
