--- a/output/latex/goodwill_to_sales_lagged_ew_big_Fama-French_5-Factor.tex
+++ b/output/latex/goodwill_to_sales_lagged_ew_big_Fama-French_5-Factor.tex
@@ -6,20 +6,20 @@
 \hline
                & Fama-French 5-Factor  \\
 \hline
-const          & -0.0049***            \\
-               & (0.0018)              \\
-mkt\_rf        & -0.0188               \\
-               & (0.0316)              \\
-smb            & -0.0249               \\
-               & (0.0735)              \\
-hml            & 0.0244                \\
-               & (0.0883)              \\
-rmw            & -0.0528               \\
-               & (0.0603)              \\
-cma            & -0.0102               \\
-               & (0.1284)              \\
-R-squared      & 0.0030                \\
-R-squared Adj. & -0.0197               \\
+const          & 0.0015                \\
+               & (0.0014)              \\
+mkt\_rf        & 0.0823**              \\
+               & (0.0412)              \\
+smb            & 0.1204**              \\
+               & (0.0591)              \\
+hml            & 0.0458                \\
+               & (0.0716)              \\
+rmw            & 0.4037***             \\
+               & (0.0837)              \\
+cma            & 0.1255                \\
+               & (0.1009)              \\
+R-squared      & 0.1874                \\
+R-squared Adj. & 0.1694                \\
 \hline
 \end{tabular}
 \end{center}
