--- a/output/latex/goodwill_to_sales_lagged_ew_big_Fama-French_5_+_Momentum.tex
+++ b/output/latex/goodwill_to_sales_lagged_ew_big_Fama-French_5_+_Momentum.tex
@@ -6,22 +6,22 @@
 \hline
                & Fama-French 5 + Momentum  \\
 \hline
-const          & -0.0049***                \\
-               & (0.0018)                  \\
-mkt\_rf        & -0.0057                   \\
-               & (0.0326)                  \\
-smb            & -0.0241                   \\
-               & (0.0728)                  \\
-hml            & 0.0417                    \\
-               & (0.0941)                  \\
-rmw            & -0.0638                   \\
-               & (0.0580)                  \\
-cma            & -0.0175                   \\
-               & (0.1284)                  \\
-mom            & 0.0387                    \\
-               & (0.0367)                  \\
-R-squared      & 0.0073                    \\
-R-squared Adj. & -0.0199                   \\
+const          & 0.0015                    \\
+               & (0.0014)                  \\
+mkt\_rf        & 0.0764*                   \\
+               & (0.0410)                  \\
+smb            & 0.1205**                  \\
+               & (0.0589)                  \\
+hml            & 0.0385                    \\
+               & (0.0764)                  \\
+rmw            & 0.4085***                 \\
+               & (0.0802)                  \\
+cma            & 0.1290                    \\
+               & (0.1026)                  \\
+mom            & -0.0171                   \\
+               & (0.0330)                  \\
+R-squared      & 0.1885                    \\
+R-squared Adj. & 0.1668                    \\
 \hline
 \end{tabular}
 \end{center}
