--- a/output/latex/goodwill_to_sales_lagged_ew_small_CAPM.tex
+++ b/output/latex/goodwill_to_sales_lagged_ew_small_CAPM.tex
@@ -4,14 +4,14 @@
 \begin{center}
 \begin{tabular}{ll}
 \hline
-               & CAPM        \\
+               & CAPM       \\
 \hline
-const          & -0.0084***  \\
-               & (0.0018)    \\
-mkt\_rf        & 0.0192      \\
-               & (0.0321)    \\
-R-squared      & 0.0014      \\
-R-squared Adj. & -0.0030     \\
+const          & 0.0069***  \\
+               & (0.0018)   \\
+mkt\_rf        & -0.0716*   \\
+               & (0.0392)   \\
+R-squared      & 0.0204     \\
+R-squared Adj. & 0.0160     \\
 \hline
 \end{tabular}
 \end{center}
