--- a/output/latex/goodwill_to_sales_lagged_ew_small_Fama-French_3-Factor.tex
+++ b/output/latex/goodwill_to_sales_lagged_ew_small_Fama-French_3-Factor.tex
@@ -6,16 +6,16 @@
 \hline
                & Fama-French 3-Factor  \\
 \hline
-const          & -0.0084***            \\
+const          & 0.0069***             \\
                & (0.0018)              \\
-mkt\_rf        & 0.0091                \\
-               & (0.0304)              \\
-smb            & 0.0307                \\
-               & (0.0678)              \\
-hml            & 0.0409                \\
-               & (0.0601)              \\
-R-squared      & 0.0063                \\
-R-squared Adj. & -0.0072               \\
+mkt\_rf        & -0.0785*              \\
+               & (0.0457)              \\
+smb            & 0.0126                \\
+               & (0.0787)              \\
+hml            & 0.0423                \\
+               & (0.0547)              \\
+R-squared      & 0.0242                \\
+R-squared Adj. & 0.0109                \\
 \hline
 \end{tabular}
 \end{center}
