--- a/output/latex/goodwill_to_sales_lagged_ew_small_Fama-French_5_+_Momentum.tex
+++ b/output/latex/goodwill_to_sales_lagged_ew_small_Fama-French_5_+_Momentum.tex
@@ -6,22 +6,22 @@
 \hline
                & Fama-French 5 + Momentum  \\
 \hline
-const          & -0.0077***                \\
+const          & 0.0065***                 \\
                & (0.0018)                  \\
-mkt\_rf        & -0.0101                   \\
-               & (0.0332)                  \\
-smb            & -0.0201                   \\
-               & (0.0698)                  \\
-hml            & 0.0779                    \\
-               & (0.0786)                  \\
-rmw            & -0.1567                   \\
-               & (0.0986)                  \\
-cma            & -0.0755                   \\
-               & (0.1050)                  \\
-mom            & -0.0165                   \\
-               & (0.0339)                  \\
-R-squared      & 0.0256                    \\
-R-squared Adj. & -0.0012                   \\
+mkt\_rf        & -0.0554                   \\
+               & (0.0468)                  \\
+smb            & 0.0599                    \\
+               & (0.0702)                  \\
+hml            & 0.1013                    \\
+               & (0.0689)                  \\
+rmw            & 0.1428                    \\
+               & (0.0931)                  \\
+cma            & -0.1423                   \\
+               & (0.0945)                  \\
+mom            & 0.0671*                   \\
+               & (0.0382)                  \\
+R-squared      & 0.0697                    \\
+R-squared Adj. & 0.0441                    \\
 \hline
 \end{tabular}
 \end{center}
