--- a/output/latex/goodwill_to_sales_lagged_vw_all_CAPM.tex
+++ b/output/latex/goodwill_to_sales_lagged_vw_all_CAPM.tex
@@ -4,14 +4,14 @@
 \begin{center}
 \begin{tabular}{ll}
 \hline
-               & CAPM        \\
+               & CAPM      \\
 \hline
-const          & -0.0060***  \\
-               & (0.0022)    \\
-mkt\_rf        & 0.0119      \\
-               & (0.0392)    \\
-R-squared      & 0.0004      \\
-R-squared Adj. & -0.0041     \\
+const          & 0.0031    \\
+               & (0.0021)  \\
+mkt\_rf        & 0.0338    \\
+               & (0.0478)  \\
+R-squared      & 0.0031    \\
+R-squared Adj. & -0.0014   \\
 \hline
 \end{tabular}
 \end{center}
