--- a/output/latex/goodwill_to_sales_lagged_vw_all_Fama-French_3-Factor.tex
+++ b/output/latex/goodwill_to_sales_lagged_vw_all_Fama-French_3-Factor.tex
@@ -6,16 +6,16 @@
 \hline
                & Fama-French 3-Factor  \\
 \hline
-const          & -0.0058***            \\
-               & (0.0022)              \\
-mkt\_rf        & -0.0121               \\
-               & (0.0461)              \\
-smb            & 0.1047                \\
-               & (0.0666)              \\
-hml            & 0.0164                \\
-               & (0.0713)              \\
-R-squared      & 0.0097                \\
-R-squared Adj. & -0.0037               \\
+const          & 0.0032                \\
+               & (0.0021)              \\
+mkt\_rf        & 0.0305                \\
+               & (0.0497)              \\
+smb            & 0.0356                \\
+               & (0.0662)              \\
+hml            & -0.0563               \\
+               & (0.0503)              \\
+R-squared      & 0.0068                \\
+R-squared Adj. & -0.0065               \\
 \hline
 \end{tabular}
 \end{center}
