--- a/output/latex/goodwill_to_sales_lagged_vw_big_Fama-French_5-Factor.tex
+++ b/output/latex/goodwill_to_sales_lagged_vw_big_Fama-French_5-Factor.tex
@@ -6,20 +6,20 @@
 \hline
                & Fama-French 5-Factor  \\
 \hline
-const          & -0.0070***            \\
+const          & 0.0046**              \\
                & (0.0021)              \\
-mkt\_rf        & -0.0019               \\
-               & (0.0444)              \\
-smb            & 0.0793                \\
-               & (0.0731)              \\
-hml            & -0.0176               \\
-               & (0.0715)              \\
-rmw            & -0.0271               \\
-               & (0.0831)              \\
-cma            & 0.0059                \\
-               & (0.0986)              \\
-R-squared      & 0.0067                \\
-R-squared Adj. & -0.0159               \\
+mkt\_rf        & 0.0160                \\
+               & (0.0453)              \\
+smb            & -0.0458               \\
+               & (0.0761)              \\
+hml            & 0.0171                \\
+               & (0.0736)              \\
+rmw            & 0.0184                \\
+               & (0.0841)              \\
+cma            & 0.0085                \\
+               & (0.1026)              \\
+R-squared      & 0.0023                \\
+R-squared Adj. & -0.0204               \\
 \hline
 \end{tabular}
 \end{center}
