--- a/output/latex/goodwill_to_sales_lagged_vw_big_Fama-French_5_+_Momentum.tex
+++ b/output/latex/goodwill_to_sales_lagged_vw_big_Fama-French_5_+_Momentum.tex
@@ -6,22 +6,22 @@
 \hline
                & Fama-French 5 + Momentum  \\
 \hline
-const          & -0.0071***                \\
+const          & 0.0047**                  \\
                & (0.0021)                  \\
-mkt\_rf        & 0.0028                    \\
-               & (0.0492)                  \\
-smb            & 0.0791                    \\
-               & (0.0731)                  \\
-hml            & -0.0111                   \\
-               & (0.0742)                  \\
-rmw            & -0.0307                   \\
-               & (0.0843)                  \\
-cma            & 0.0043                    \\
-               & (0.0992)                  \\
-mom            & 0.0140                    \\
-               & (0.0422)                  \\
-R-squared      & 0.0072                    \\
-R-squared Adj. & -0.0202                   \\
+mkt\_rf        & 0.0126                    \\
+               & (0.0509)                  \\
+smb            & -0.0456                   \\
+               & (0.0761)                  \\
+hml            & 0.0124                    \\
+               & (0.0778)                  \\
+rmw            & 0.0211                    \\
+               & (0.0848)                  \\
+cma            & 0.0097                    \\
+               & (0.1030)                  \\
+mom            & -0.0103                   \\
+               & (0.0431)                  \\
+R-squared      & 0.0025                    \\
+R-squared Adj. & -0.0248                   \\
 \hline
 \end{tabular}
 \end{center}
