--- a/output/latex/goodwill_to_sales_lagged_vw_small_Fama-French_5-Factor.tex
+++ b/output/latex/goodwill_to_sales_lagged_vw_small_Fama-French_5-Factor.tex
@@ -6,20 +6,20 @@
 \hline
                & Fama-French 5-Factor  \\
 \hline
-const          & -0.0053***            \\
+const          & 0.0041***             \\
                & (0.0016)              \\
-mkt\_rf        & -0.0020               \\
-               & (0.0312)              \\
-smb            & 0.0396                \\
-               & (0.0630)              \\
-hml            & 0.0409                \\
-               & (0.0604)              \\
-rmw            & -0.0895               \\
-               & (0.0867)              \\
-cma            & -0.1090               \\
-               & (0.0910)              \\
-R-squared      & 0.0188                \\
-R-squared Adj. & -0.0036               \\
+mkt\_rf        & -0.0590               \\
+               & (0.0384)              \\
+smb            & 0.0987                \\
+               & (0.0717)              \\
+hml            & -0.0198               \\
+               & (0.0560)              \\
+rmw            & 0.1436**              \\
+               & (0.0648)              \\
+cma            & -0.0692               \\
+               & (0.0882)              \\
+R-squared      & 0.0383                \\
+R-squared Adj. & 0.0163                \\
 \hline
 \end{tabular}
 \end{center}
