--- a/output/latex/goodwill_to_sales_lagged_vw_small_Fama-French_5_+_Momentum.tex
+++ b/output/latex/goodwill_to_sales_lagged_vw_small_Fama-French_5_+_Momentum.tex
@@ -6,22 +6,22 @@
 \hline
                & Fama-French 5 + Momentum  \\
 \hline
-const          & -0.0053***                \\
+const          & 0.0040**                  \\
                & (0.0016)                  \\
-mkt\_rf        & -0.0067                   \\
-               & (0.0348)                  \\
-smb            & 0.0398                    \\
-               & (0.0630)                  \\
-hml            & 0.0344                    \\
-               & (0.0594)                  \\
-rmw            & -0.0858                   \\
-               & (0.0875)                  \\
-cma            & -0.1073                   \\
-               & (0.0900)                  \\
-mom            & -0.0142                   \\
-               & (0.0320)                  \\
-R-squared      & 0.0195                    \\
-R-squared Adj. & -0.0075                   \\
+mkt\_rf        & -0.0466                   \\
+               & (0.0410)                  \\
+smb            & 0.0979                    \\
+               & (0.0716)                  \\
+hml            & -0.0027                   \\
+               & (0.0607)                  \\
+rmw            & 0.1339**                  \\
+               & (0.0666)                  \\
+cma            & -0.0731                   \\
+               & (0.0906)                  \\
+mom            & 0.0374                    \\
+               & (0.0307)                  \\
+R-squared      & 0.0432                    \\
+R-squared Adj. & 0.0168                    \\
 \hline
 \end{tabular}
 \end{center}
