--- a/output/latex/goodwill_to_equity_lagged_ew_all_Fama-French_5-Factor.tex
+++ b/output/latex/goodwill_to_equity_lagged_ew_all_Fama-French_5-Factor.tex
@@ -6,20 +6,20 @@
 \hline
                & Fama-French 5-Factor  \\
 \hline
-const          & -0.0017               \\
-               & (0.0014)              \\
-mkt\_rf        & 0.1318***             \\
-               & (0.0307)              \\
-smb            & -0.0608               \\
-               & (0.0675)              \\
-hml            & -0.0157               \\
-               & (0.0917)              \\
-rmw            & 0.1172*               \\
-               & (0.0687)              \\
-cma            & -0.0163               \\
-               & (0.1267)              \\
-R-squared      & 0.0739                \\
-R-squared Adj. & 0.0529                \\
+const          & 0.0002                \\
+               & (0.0010)              \\
+mkt\_rf        & -0.1182***            \\
+               & (0.0275)              \\
+smb            & 0.0267                \\
+               & (0.0557)              \\
+hml            & 0.0791                \\
+               & (0.0506)              \\
+rmw            & -0.1751**             \\
+               & (0.0826)              \\
+cma            & -0.0289               \\
+               & (0.0784)              \\
+R-squared      & 0.1127                \\
+R-squared Adj. & 0.0930                \\
 \hline
 \end{tabular}
 \end{center}
