--- a/output/latex/goodwill_to_equity_lagged_ew_big_Fama-French_5-Factor.tex
+++ b/output/latex/goodwill_to_equity_lagged_ew_big_Fama-French_5-Factor.tex
@@ -6,20 +6,20 @@
 \hline
                & Fama-French 5-Factor  \\
 \hline
-const          & -0.0026               \\
-               & (0.0016)              \\
-mkt\_rf        & 0.0222                \\
-               & (0.0389)              \\
-smb            & -0.0947               \\
-               & (0.0748)              \\
-hml            & 0.0292                \\
-               & (0.0949)              \\
-rmw            & 0.0462                \\
-               & (0.0657)              \\
-cma            & 0.0513                \\
-               & (0.1271)              \\
-R-squared      & 0.0158                \\
-R-squared Adj. & -0.0066               \\
+const          & 0.0012                \\
+               & (0.0013)              \\
+mkt\_rf        & -0.0164               \\
+               & (0.0338)              \\
+smb            & 0.0787                \\
+               & (0.0623)              \\
+hml            & 0.0709                \\
+               & (0.0514)              \\
+rmw            & -0.0588               \\
+               & (0.0636)              \\
+cma            & -0.1597**             \\
+               & (0.0673)              \\
+R-squared      & 0.0358                \\
+R-squared Adj. & 0.0144                \\
 \hline
 \end{tabular}
 \end{center}
