--- a/output/latex/goodwill_to_equity_lagged_ew_small_Fama-French_5_+_Momentum.tex
+++ b/output/latex/goodwill_to_equity_lagged_ew_small_Fama-French_5_+_Momentum.tex
@@ -6,22 +6,22 @@
 \hline
                & Fama-French 5 + Momentum  \\
 \hline
-const          & -0.0026*                  \\
-               & (0.0015)                  \\
-mkt\_rf        & 0.0707                    \\
-               & (0.0456)                  \\
-smb            & -0.0580                   \\
-               & (0.0728)                  \\
-hml            & -0.0694                   \\
-               & (0.1045)                  \\
-rmw            & -0.0928                   \\
-               & (0.0920)                  \\
-cma            & 0.1363                    \\
-               & (0.1404)                  \\
-mom            & -0.0343                   \\
-               & (0.0346)                  \\
-R-squared      & 0.0347                    \\
-R-squared Adj. & 0.0082                    \\
+const          & 0.0004                    \\
+               & (0.0016)                  \\
+mkt\_rf        & -0.0598                   \\
+               & (0.0451)                  \\
+smb            & 0.0378                    \\
+               & (0.0644)                  \\
+hml            & 0.0696                    \\
+               & (0.0634)                  \\
+rmw            & -0.0092                   \\
+               & (0.0805)                  \\
+cma            & 0.0359                    \\
+               & (0.0985)                  \\
+mom            & 0.0237                    \\
+               & (0.0307)                  \\
+R-squared      & 0.0301                    \\
+R-squared Adj. & 0.0034                    \\
 \hline
 \end{tabular}
 \end{center}
