--- a/output/latex/goodwill_to_equity_lagged_vw_all_CAPM.tex
+++ b/output/latex/goodwill_to_equity_lagged_vw_all_CAPM.tex
@@ -6,10 +6,10 @@
 \hline
                & CAPM      \\
 \hline
-const          & -0.0040*  \\
+const          & 0.0017    \\
                & (0.0021)  \\
-mkt\_rf        & 0.0034    \\
-               & (0.0432)  \\
+mkt\_rf        & 0.0021    \\
+               & (0.0501)  \\
 R-squared      & 0.0000    \\
 R-squared Adj. & -0.0045   \\
 \hline
