--- a/output/latex/goodwill_to_equity_lagged_vw_all_Fama-French_5_+_Momentum.tex
+++ b/output/latex/goodwill_to_equity_lagged_vw_all_Fama-French_5_+_Momentum.tex
@@ -6,22 +6,22 @@
 \hline
                & Fama-French 5 + Momentum  \\
 \hline
-const          & -0.0041*                  \\
-               & (0.0023)                  \\
-mkt\_rf        & 0.0107                    \\
-               & (0.0559)                  \\
-smb            & 0.0652                    \\
-               & (0.0991)                  \\
-hml            & 0.0176                    \\
-               & (0.0842)                  \\
-rmw            & 0.0462                    \\
-               & (0.1153)                  \\
-cma            & -0.0086                   \\
-               & (0.1288)                  \\
-mom            & 0.0559                    \\
-               & (0.0498)                  \\
-R-squared      & 0.0093                    \\
-R-squared Adj. & -0.0180                   \\
+const          & 0.0016                    \\
+               & (0.0021)                  \\
+mkt\_rf        & 0.0311                    \\
+               & (0.0597)                  \\
+smb            & -0.1166                   \\
+               & (0.0793)                  \\
+hml            & -0.0446                   \\
+               & (0.0847)                  \\
+rmw            & 0.0177                    \\
+               & (0.1076)                  \\
+cma            & -0.0344                   \\
+               & (0.0762)                  \\
+mom            & -0.0051                   \\
+               & (0.0430)                  \\
+R-squared      & 0.0198                    \\
+R-squared Adj. & -0.0071                   \\
 \hline
 \end{tabular}
 \end{center}
