--- a/output/latex/goodwill_to_equity_lagged_vw_big_Fama-French_5_+_Momentum.tex
+++ b/output/latex/goodwill_to_equity_lagged_vw_big_Fama-French_5_+_Momentum.tex
@@ -6,22 +6,22 @@
 \hline
                & Fama-French 5 + Momentum  \\
 \hline
-const          & -0.0032                   \\
-               & (0.0023)                  \\
-mkt\_rf        & 0.0305                    \\
-               & (0.0604)                  \\
-smb            & 0.0618                    \\
-               & (0.1107)                  \\
-hml            & 0.0175                    \\
-               & (0.0807)                  \\
-rmw            & 0.0064                    \\
-               & (0.1255)                  \\
-cma            & -0.0339                   \\
-               & (0.1331)                  \\
-mom            & 0.0799*                   \\
-               & (0.0484)                  \\
-R-squared      & 0.0152                    \\
-R-squared Adj. & -0.0119                   \\
+const          & 0.0009                    \\
+               & (0.0022)                  \\
+mkt\_rf        & 0.0321                    \\
+               & (0.0627)                  \\
+smb            & -0.1022                   \\
+               & (0.0846)                  \\
+hml            & -0.0548                   \\
+               & (0.0882)                  \\
+rmw            & 0.0055                    \\
+               & (0.1102)                  \\
+cma            & -0.0388                   \\
+               & (0.0908)                  \\
+mom            & -0.0064                   \\
+               & (0.0500)                  \\
+R-squared      & 0.0165                    \\
+R-squared Adj. & -0.0104                   \\
 \hline
 \end{tabular}
 \end{center}
