--- a/output/latex/goodwill_to_equity_lagged_vw_small_Fama-French_5-Factor.tex
+++ b/output/latex/goodwill_to_equity_lagged_vw_small_Fama-French_5-Factor.tex
@@ -6,20 +6,20 @@
 \hline
                & Fama-French 5-Factor  \\
 \hline
-const          & -0.0010               \\
-               & (0.0015)              \\
-mkt\_rf        & 0.1356***             \\
-               & (0.0375)              \\
-smb            & 0.0126                \\
-               & (0.0739)              \\
-hml            & 0.0016                \\
-               & (0.1066)              \\
-rmw            & 0.0792                \\
-               & (0.0842)              \\
-cma            & 0.1497                \\
-               & (0.1423)              \\
-R-squared      & 0.0765                \\
-R-squared Adj. & 0.0554                \\
+const          & -0.0026               \\
+               & (0.0016)              \\
+mkt\_rf        & -0.0601               \\
+               & (0.0426)              \\
+smb            & 0.0935                \\
+               & (0.0750)              \\
+hml            & -0.0378               \\
+               & (0.0669)              \\
+rmw            & 0.0901                \\
+               & (0.0788)              \\
+cma            & 0.1168                \\
+               & (0.1048)              \\
+R-squared      & 0.0284                \\
+R-squared Adj. & 0.0063                \\
 \hline
 \end{tabular}
 \end{center}
