--- a/output/latex/goodwill_to_market_cap_lagged_ew_all_Fama-French_5_+_Momentum.tex
+++ b/output/latex/goodwill_to_market_cap_lagged_ew_all_Fama-French_5_+_Momentum.tex
@@ -6,22 +6,22 @@
 \hline
                & Fama-French 5 + Momentum  \\
 \hline
-const          & 0.0000                    \\
-               & (0.0012)                  \\
-mkt\_rf        & 0.1002***                 \\
-               & (0.0380)                  \\
-smb            & -0.2223***                \\
-               & (0.0633)                  \\
-hml            & 0.2407***                 \\
-               & (0.0883)                  \\
-rmw            & -0.0089                   \\
-               & (0.0672)                  \\
-cma            & 0.1959**                  \\
-               & (0.0854)                  \\
-mom            & -0.3484***                \\
-               & (0.0381)                  \\
-R-squared      & 0.5884                    \\
-R-squared Adj. & 0.5771                    \\
+const          & -0.0026**                 \\
+               & (0.0013)                  \\
+mkt\_rf        & -0.0682                   \\
+               & (0.0419)                  \\
+smb            & 0.1956**                  \\
+               & (0.0803)                  \\
+hml            & -0.3069***                \\
+               & (0.0910)                  \\
+rmw            & -0.1368                   \\
+               & (0.1154)                  \\
+cma            & -0.0546                   \\
+               & (0.1069)                  \\
+mom            & 0.2970***                 \\
+               & (0.0508)                  \\
+R-squared      & 0.4672                    \\
+R-squared Adj. & 0.4529                    \\
 \hline
 \end{tabular}
 \end{center}
