--- a/output/latex/goodwill_to_market_cap_lagged_ew_big_CAPM.tex
+++ b/output/latex/goodwill_to_market_cap_lagged_ew_big_CAPM.tex
@@ -6,12 +6,12 @@
 \hline
                & CAPM      \\
 \hline
-const          & -0.0025   \\
-               & (0.0022)  \\
-mkt\_rf        & 0.1470**  \\
-               & (0.0591)  \\
-R-squared      & 0.0484    \\
-R-squared Adj. & 0.0441    \\
+const          & -0.0003   \\
+               & (0.0021)  \\
+mkt\_rf        & -0.1024*  \\
+               & (0.0592)  \\
+R-squared      & 0.0227    \\
+R-squared Adj. & 0.0184    \\
 \hline
 \end{tabular}
 \end{center}
