--- a/output/latex/goodwill_to_market_cap_lagged_ew_big_Fama-French_5_+_Momentum.tex
+++ b/output/latex/goodwill_to_market_cap_lagged_ew_big_Fama-French_5_+_Momentum.tex
@@ -6,22 +6,22 @@
 \hline
                & Fama-French 5 + Momentum  \\
 \hline
-const          & -0.0030**                 \\
-               & (0.0015)                  \\
-mkt\_rf        & 0.0710*                   \\
-               & (0.0414)                  \\
-smb            & -0.1664**                 \\
-               & (0.0714)                  \\
-hml            & 0.2441***                 \\
-               & (0.0786)                  \\
-rmw            & 0.0295                    \\
-               & (0.0728)                  \\
-cma            & 0.4449***                 \\
-               & (0.0892)                  \\
-mom            & -0.3226***                \\
-               & (0.0400)                  \\
-R-squared      & 0.5491                    \\
-R-squared Adj. & 0.5367                    \\
+const          & 0.0004                    \\
+               & (0.0016)                  \\
+mkt\_rf        & -0.0256                   \\
+               & (0.0452)                  \\
+smb            & 0.1194                    \\
+               & (0.0919)                  \\
+hml            & -0.3333***                \\
+               & (0.0924)                  \\
+rmw            & -0.2114                   \\
+               & (0.1315)                  \\
+cma            & -0.2519**                 \\
+               & (0.1247)                  \\
+mom            & 0.2625***                 \\
+               & (0.0561)                  \\
+R-squared      & 0.4279                    \\
+R-squared Adj. & 0.4126                    \\
 \hline
 \end{tabular}
 \end{center}
