--- a/output/latex/goodwill_to_market_cap_lagged_ew_small_Fama-French_3-Factor.tex
+++ b/output/latex/goodwill_to_market_cap_lagged_ew_small_Fama-French_3-Factor.tex
@@ -6,16 +6,16 @@
 \hline
                & Fama-French 3-Factor  \\
 \hline
-const          & 0.0022                \\
-               & (0.0017)              \\
-mkt\_rf        & 0.2558***             \\
-               & (0.0447)              \\
-smb            & -0.3578***            \\
-               & (0.0722)              \\
-hml            & 0.3690***             \\
-               & (0.0760)              \\
-R-squared      & 0.3056                \\
-R-squared Adj. & 0.2962                \\
+const          & -0.0071***            \\
+               & (0.0024)              \\
+mkt\_rf        & 0.0338                \\
+               & (0.0844)              \\
+smb            & -0.0850               \\
+               & (0.0844)              \\
+hml            & 0.1300*               \\
+               & (0.0667)              \\
+R-squared      & 0.0224                \\
+R-squared Adj. & 0.0091                \\
 \hline
 \end{tabular}
 \end{center}
