--- a/output/latex/goodwill_to_market_cap_lagged_ew_small_Fama-French_5-Factor.tex
+++ b/output/latex/goodwill_to_market_cap_lagged_ew_small_Fama-French_5-Factor.tex
@@ -6,20 +6,20 @@
 \hline
                & Fama-French 5-Factor  \\
 \hline
-const          & 0.0024                \\
-               & (0.0017)              \\
-mkt\_rf        & 0.2488***             \\
-               & (0.0424)              \\
-smb            & -0.3600***            \\
-               & (0.0764)              \\
-hml            & 0.3977***             \\
-               & (0.0909)              \\
-rmw            & -0.0018               \\
-               & (0.0891)              \\
-cma            & -0.0735               \\
-               & (0.1110)              \\
-R-squared      & 0.3072                \\
-R-squared Adj. & 0.2914                \\
+const          & -0.0064***            \\
+               & (0.0021)              \\
+mkt\_rf        & 0.0169                \\
+               & (0.0770)              \\
+smb            & -0.1309               \\
+               & (0.0903)              \\
+hml            & 0.1978**              \\
+               & (0.0874)              \\
+rmw            & -0.1391               \\
+               & (0.1156)              \\
+cma            & -0.1534               \\
+               & (0.1440)              \\
+R-squared      & 0.0364                \\
+R-squared Adj. & 0.0145                \\
 \hline
 \end{tabular}
 \end{center}
