--- a/output/latex/goodwill_to_market_cap_lagged_vw_all_Fama-French_5-Factor.tex
+++ b/output/latex/goodwill_to_market_cap_lagged_vw_all_Fama-French_5-Factor.tex
@@ -6,20 +6,20 @@
 \hline
                & Fama-French 5-Factor  \\
 \hline
-const          & -0.0059***            \\
-               & (0.0021)              \\
-mkt\_rf        & 0.1496**              \\
-               & (0.0632)              \\
-smb            & -0.1344               \\
-               & (0.0907)              \\
-hml            & 0.5520***             \\
-               & (0.1232)              \\
-rmw            & -0.2692**             \\
-               & (0.1373)              \\
-cma            & 0.6395***             \\
-               & (0.1960)              \\
-R-squared      & 0.4247                \\
-R-squared Adj. & 0.4116                \\
+const          & 0.0021                \\
+               & (0.0030)              \\
+mkt\_rf        & 0.0147                \\
+               & (0.0997)              \\
+smb            & -0.0084               \\
+               & (0.1164)              \\
+hml            & 0.2007*               \\
+               & (0.1028)              \\
+rmw            & -0.0723               \\
+               & (0.2112)              \\
+cma            & -0.1717               \\
+               & (0.1879)              \\
+R-squared      & 0.0174                \\
+R-squared Adj. & -0.0050               \\
 \hline
 \end{tabular}
 \end{center}
