--- a/output/latex/goodwill_to_market_cap_lagged_vw_all_Fama-French_5_+_Momentum.tex
+++ b/output/latex/goodwill_to_market_cap_lagged_vw_all_Fama-French_5_+_Momentum.tex
@@ -6,22 +6,22 @@
 \hline
                & Fama-French 5 + Momentum  \\
 \hline
-const          & -0.0056***                \\
-               & (0.0019)                  \\
-mkt\_rf        & 0.0533                    \\
-               & (0.0636)                  \\
-smb            & -0.1740*                  \\
-               & (0.0920)                  \\
-hml            & 0.3595***                 \\
-               & (0.1238)                  \\
-rmw            & -0.2638**                 \\
-               & (0.1265)                  \\
-cma            & 0.8081***                 \\
-               & (0.1630)                  \\
-mom            & -0.3571***                \\
-               & (0.0588)                  \\
-R-squared      & 0.5384                    \\
-R-squared Adj. & 0.5257                    \\
+const          & 0.0021                    \\
+               & (0.0030)                  \\
+mkt\_rf        & 0.0240                    \\
+               & (0.0980)                  \\
+smb            & -0.0090                   \\
+               & (0.1155)                  \\
+hml            & 0.2135*                   \\
+               & (0.1134)                  \\
+rmw            & -0.0796                   \\
+               & (0.2058)                  \\
+cma            & -0.1746                   \\
+               & (0.1871)                  \\
+mom            & 0.0281                    \\
+               & (0.0637)                  \\
+R-squared      & 0.0182                    \\
+R-squared Adj. & -0.0088                   \\
 \hline
 \end{tabular}
 \end{center}
