--- a/output/latex/goodwill_to_market_cap_lagged_vw_big_CAPM.tex
+++ b/output/latex/goodwill_to_market_cap_lagged_vw_big_CAPM.tex
@@ -6,12 +6,12 @@
 \hline
                & CAPM      \\
 \hline
-const          & -0.0056*  \\
-               & (0.0032)  \\
-mkt\_rf        & 0.1131    \\
-               & (0.0980)  \\
-R-squared      & 0.0153    \\
-R-squared Adj. & 0.0109    \\
+const          & 0.0021    \\
+               & (0.0031)  \\
+mkt\_rf        & 0.0498    \\
+               & (0.0863)  \\
+R-squared      & 0.0032    \\
+R-squared Adj. & -0.0012   \\
 \hline
 \end{tabular}
 \end{center}
