--- a/output/latex/goodwill_to_market_cap_lagged_vw_big_Fama-French_3-Factor.tex
+++ b/output/latex/goodwill_to_market_cap_lagged_vw_big_Fama-French_3-Factor.tex
@@ -6,16 +6,16 @@
 \hline
                & Fama-French 3-Factor  \\
 \hline
-const          & -0.0054**             \\
-               & (0.0022)              \\
-mkt\_rf        & 0.0576                \\
-               & (0.0658)              \\
-smb            & -0.0949               \\
-               & (0.0899)              \\
-hml            & 0.8069***             \\
-               & (0.0965)              \\
-R-squared      & 0.3864                \\
-R-squared Adj. & 0.3781                \\
+const          & 0.0021                \\
+               & (0.0031)              \\
+mkt\_rf        & 0.0280                \\
+               & (0.0937)              \\
+smb            & 0.0473                \\
+               & (0.1177)              \\
+hml            & 0.1179                \\
+               & (0.0844)              \\
+R-squared      & 0.0135                \\
+R-squared Adj. & 0.0001                \\
 \hline
 \end{tabular}
 \end{center}
