--- a/output/latex/goodwill_to_market_cap_lagged_vw_big_Fama-French_5-Factor.tex
+++ b/output/latex/goodwill_to_market_cap_lagged_vw_big_Fama-French_5-Factor.tex
@@ -6,20 +6,20 @@
 \hline
                & Fama-French 5-Factor  \\
 \hline
-const          & -0.0057***            \\
-               & (0.0021)              \\
-mkt\_rf        & 0.1058*               \\
-               & (0.0605)              \\
-smb            & -0.2031**             \\
-               & (0.0926)              \\
-hml            & 0.6255***             \\
-               & (0.1062)              \\
-rmw            & -0.3466**             \\
-               & (0.1384)              \\
-cma            & 0.5528***             \\
-               & (0.1874)              \\
-R-squared      & 0.4550                \\
-R-squared Adj. & 0.4426                \\
+const          & 0.0022                \\
+               & (0.0030)              \\
+mkt\_rf        & 0.0244                \\
+               & (0.0946)              \\
+smb            & 0.0585                \\
+               & (0.1231)              \\
+hml            & 0.1463                \\
+               & (0.1034)              \\
+rmw            & 0.0396                \\
+               & (0.1982)              \\
+cma            & -0.0963               \\
+               & (0.1824)              \\
+R-squared      & 0.0156                \\
+R-squared Adj. & -0.0069               \\
 \hline
 \end{tabular}
 \end{center}
