--- a/output/latex/goodwill_to_market_cap_lagged_vw_big_Fama-French_5_+_Momentum.tex
+++ b/output/latex/goodwill_to_market_cap_lagged_vw_big_Fama-French_5_+_Momentum.tex
@@ -6,22 +6,22 @@
 \hline
                & Fama-French 5 + Momentum  \\
 \hline
-const          & -0.0055***                \\
-               & (0.0019)                  \\
-mkt\_rf        & 0.0190                    \\
-               & (0.0615)                  \\
-smb            & -0.2388***                \\
-               & (0.0905)                  \\
-hml            & 0.4519***                 \\
-               & (0.1056)                  \\
-rmw            & -0.3418***                \\
-               & (0.1194)                  \\
-cma            & 0.7048***                 \\
-               & (0.1549)                  \\
-mom            & -0.3221***                \\
-               & (0.0563)                  \\
-R-squared      & 0.5528                    \\
-R-squared Adj. & 0.5405                    \\
+const          & 0.0021                    \\
+               & (0.0030)                  \\
+mkt\_rf        & 0.0403                    \\
+               & (0.0928)                  \\
+smb            & 0.0575                    \\
+               & (0.1209)                  \\
+hml            & 0.1683                    \\
+               & (0.1142)                  \\
+rmw            & 0.0271                    \\
+               & (0.1928)                  \\
+cma            & -0.1013                   \\
+               & (0.1797)                  \\
+mom            & 0.0480                    \\
+               & (0.0603)                  \\
+R-squared      & 0.0179                    \\
+R-squared Adj. & -0.0091                   \\
 \hline
 \end{tabular}
 \end{center}
