--- a/output/latex/goodwill_to_market_cap_lagged_vw_small_Fama-French_5_+_Momentum.tex
+++ b/output/latex/goodwill_to_market_cap_lagged_vw_small_Fama-French_5_+_Momentum.tex
@@ -6,22 +6,22 @@
 \hline
                & Fama-French 5 + Momentum  \\
 \hline
-const          & 0.0010                    \\
-               & (0.0014)                  \\
-mkt\_rf        & 0.1783***                 \\
-               & (0.0394)                  \\
-smb            & -0.4611***                \\
-               & (0.0668)                  \\
-hml            & 0.2648***                 \\
-               & (0.0728)                  \\
-rmw            & 0.1653*                   \\
-               & (0.0918)                  \\
-cma            & 0.2535**                  \\
-               & (0.1079)                  \\
-mom            & -0.3761***                \\
-               & (0.0397)                  \\
-R-squared      & 0.5741                    \\
-R-squared Adj. & 0.5623                    \\
+const          & -0.0063***                \\
+               & (0.0024)                  \\
+mkt\_rf        & 0.0697                    \\
+               & (0.0859)                  \\
+smb            & -0.1263                   \\
+               & (0.1065)                  \\
+hml            & 0.1272                    \\
+               & (0.0871)                  \\
+rmw            & -0.0814                   \\
+               & (0.1348)                  \\
+cma            & -0.0920                   \\
+               & (0.1570)                  \\
+mom            & 0.0484                    \\
+               & (0.0445)                  \\
+R-squared      & 0.0182                    \\
+R-squared Adj. & -0.0088                   \\
 \hline
 \end{tabular}
 \end{center}
