--- a/output/latex/goodwill_to_sales_lagged_ew_all_Fama-French_5-Factor.tex
+++ b/output/latex/goodwill_to_sales_lagged_ew_all_Fama-French_5-Factor.tex
@@ -6,20 +6,20 @@
 \hline
                & Fama-French 5-Factor  \\
 \hline
-const          & -0.0036*              \\
-               & (0.0022)              \\
-mkt\_rf        & 0.0257                \\
-               & (0.0511)              \\
-smb            & -0.1974**             \\
-               & (0.0994)              \\
-hml            & -0.0887               \\
-               & (0.0875)              \\
-rmw            & -0.4749***            \\
-               & (0.0865)              \\
-cma            & -0.1292               \\
-               & (0.1336)              \\
-R-squared      & 0.1785                \\
-R-squared Adj. & 0.1601                \\
+const          & 0.0021                \\
+               & (0.0015)              \\
+mkt\_rf        & 0.0327                \\
+               & (0.0431)              \\
+smb            & 0.0757                \\
+               & (0.0520)              \\
+hml            & 0.0978                \\
+               & (0.0620)              \\
+rmw            & 0.3605***             \\
+               & (0.0735)              \\
+cma            & 0.1525                \\
+               & (0.1041)              \\
+R-squared      & 0.2136                \\
+R-squared Adj. & 0.1962                \\
 \hline
 \end{tabular}
 \end{center}
