--- a/output/latex/goodwill_to_sales_lagged_ew_all_Fama-French_5_+_Momentum.tex
+++ b/output/latex/goodwill_to_sales_lagged_ew_all_Fama-French_5_+_Momentum.tex
@@ -6,22 +6,22 @@
 \hline
                & Fama-French 5 + Momentum  \\
 \hline
-const          & -0.0037*                  \\
-               & (0.0022)                  \\
-mkt\_rf        & 0.0422                    \\
-               & (0.0524)                  \\
-smb            & -0.1973*                  \\
-               & (0.1018)                  \\
-hml            & -0.0685                   \\
-               & (0.0934)                  \\
-rmw            & -0.4882***                \\
-               & (0.0910)                  \\
-cma            & -0.1390                   \\
-               & (0.1348)                  \\
-mom            & 0.0474                    \\
-               & (0.0398)                  \\
-R-squared      & 0.1839                    \\
-R-squared Adj. & 0.1620                    \\
+const          & 0.0022                    \\
+               & (0.0015)                  \\
+mkt\_rf        & 0.0093                    \\
+               & (0.0430)                  \\
+smb            & 0.0759                    \\
+               & (0.0510)                  \\
+hml            & 0.0691                    \\
+               & (0.0631)                  \\
+rmw            & 0.3794***                 \\
+               & (0.0686)                  \\
+cma            & 0.1664*                   \\
+               & (0.1008)                  \\
+mom            & -0.0676*                  \\
+               & (0.0351)                  \\
+R-squared      & 0.2335                    \\
+R-squared Adj. & 0.2129                    \\
 \hline
 \end{tabular}
 \end{center}
