--- a/output/latex/goodwill_to_sales_lagged_ew_big_CAPM.tex
+++ b/output/latex/goodwill_to_sales_lagged_ew_big_CAPM.tex
@@ -4,14 +4,14 @@
 \begin{center}
 \begin{tabular}{ll}
 \hline
-               & CAPM        \\
+               & CAPM      \\
 \hline
-const          & -0.0050***  \\
-               & (0.0017)    \\
-mkt\_rf        & -0.0160     \\
-               & (0.0257)    \\
-R-squared      & 0.0009      \\
-R-squared Adj. & -0.0036     \\
+const          & 0.0030*   \\
+               & (0.0015)  \\
+mkt\_rf        & 0.0607    \\
+               & (0.0402)  \\
+R-squared      & 0.0169    \\
+R-squared Adj. & 0.0126    \\
 \hline
 \end{tabular}
 \end{center}
