--- a/output/latex/goodwill_to_sales_lagged_ew_small_Fama-French_5-Factor.tex
+++ b/output/latex/goodwill_to_sales_lagged_ew_small_Fama-French_5-Factor.tex
@@ -6,20 +6,20 @@
 \hline
                & Fama-French 5-Factor  \\
 \hline
-const          & -0.0077***            \\
-               & (0.0018)              \\
-mkt\_rf        & -0.0045               \\
-               & (0.0310)              \\
-smb            & -0.0204               \\
-               & (0.0695)              \\
-hml            & 0.0855                \\
-               & (0.0769)              \\
-rmw            & -0.1611               \\
-               & (0.0985)              \\
-cma            & -0.0774               \\
-               & (0.1053)              \\
-R-squared      & 0.0248                \\
-R-squared Adj. & 0.0025                \\
+const          & 0.0066***             \\
+               & (0.0019)              \\
+mkt\_rf        & -0.0776*              \\
+               & (0.0460)              \\
+smb            & 0.0613                \\
+               & (0.0705)              \\
+hml            & 0.0706                \\
+               & (0.0642)              \\
+rmw            & 0.1602*               \\
+               & (0.0917)              \\
+cma            & -0.1354               \\
+               & (0.0954)              \\
+R-squared      & 0.0558                \\
+R-squared Adj. & 0.0342                \\
 \hline
 \end{tabular}
 \end{center}
