--- a/output/latex/goodwill_to_sales_lagged_vw_all_Fama-French_5-Factor.tex
+++ b/output/latex/goodwill_to_sales_lagged_vw_all_Fama-French_5-Factor.tex
@@ -6,20 +6,20 @@
 \hline
                & Fama-French 5-Factor  \\
 \hline
-const          & -0.0057***            \\
-               & (0.0022)              \\
-mkt\_rf        & -0.0144               \\
-               & (0.0442)              \\
-smb            & 0.0852                \\
-               & (0.0731)              \\
-hml            & 0.0181                \\
-               & (0.0738)              \\
-rmw            & -0.0632               \\
-               & (0.0771)              \\
-cma            & 0.0159                \\
-               & (0.0954)              \\
-R-squared      & 0.0119                \\
-R-squared Adj. & -0.0107               \\
+const          & 0.0030                \\
+               & (0.0021)              \\
+mkt\_rf        & 0.0370                \\
+               & (0.0485)              \\
+smb            & 0.0375                \\
+               & (0.0704)              \\
+hml            & -0.0902               \\
+               & (0.0565)              \\
+rmw            & 0.0000                \\
+               & (0.0822)              \\
+cma            & 0.0966                \\
+               & (0.1058)              \\
+R-squared      & 0.0098                \\
+R-squared Adj. & -0.0126               \\
 \hline
 \end{tabular}
 \end{center}
