--- a/output/latex/goodwill_to_sales_lagged_vw_all_Fama-French_5_+_Momentum.tex
+++ b/output/latex/goodwill_to_sales_lagged_vw_all_Fama-French_5_+_Momentum.tex
@@ -6,22 +6,22 @@
 \hline
                & Fama-French 5 + Momentum  \\
 \hline
-const          & -0.0057***                \\
-               & (0.0022)                  \\
-mkt\_rf        & -0.0081                   \\
-               & (0.0496)                  \\
-smb            & 0.0849                    \\
-               & (0.0729)                  \\
-hml            & 0.0267                    \\
-               & (0.0764)                  \\
-rmw            & -0.0681                   \\
-               & (0.0792)                  \\
-cma            & 0.0138                    \\
-               & (0.0965)                  \\
-mom            & 0.0186                    \\
-               & (0.0445)                  \\
-R-squared      & 0.0126                    \\
-R-squared Adj. & -0.0146                   \\
+const          & 0.0031                    \\
+               & (0.0021)                  \\
+mkt\_rf        & 0.0217                    \\
+               & (0.0487)                  \\
+smb            & 0.0367                    \\
+               & (0.0691)                  \\
+hml            & -0.1105*                  \\
+               & (0.0594)                  \\
+rmw            & 0.0128                    \\
+               & (0.0781)                  \\
+cma            & 0.1052                    \\
+               & (0.1035)                  \\
+mom            & -0.0454                   \\
+               & (0.0380)                  \\
+R-squared      & 0.0143                    \\
+R-squared Adj. & -0.0125                   \\
 \hline
 \end{tabular}
 \end{center}
