--- a/output/latex/goodwill_to_sales_lagged_vw_big_CAPM.tex
+++ b/output/latex/goodwill_to_sales_lagged_vw_big_CAPM.tex
@@ -4,14 +4,14 @@
 \begin{center}
 \begin{tabular}{ll}
 \hline
-               & CAPM        \\
+               & CAPM      \\
 \hline
-const          & -0.0072***  \\
-               & (0.0021)    \\
-mkt\_rf        & 0.0165      \\
-               & (0.0383)    \\
-R-squared      & 0.0008      \\
-R-squared Adj. & -0.0037     \\
+const          & 0.0048**  \\
+               & (0.0021)  \\
+mkt\_rf        & 0.0048    \\
+               & (0.0410)  \\
+R-squared      & 0.0001    \\
+R-squared Adj. & -0.0044   \\
 \hline
 \end{tabular}
 \end{center}
