--- a/output/latex/goodwill_to_sales_lagged_vw_big_Fama-French_3-Factor.tex
+++ b/output/latex/goodwill_to_sales_lagged_vw_big_Fama-French_3-Factor.tex
@@ -6,16 +6,16 @@
 \hline
                & Fama-French 3-Factor  \\
 \hline
-const          & -0.0071***            \\
+const          & 0.0047**              \\
                & (0.0021)              \\
-mkt\_rf        & -0.0008               \\
-               & (0.0455)              \\
-smb            & 0.0877                \\
-               & (0.0666)              \\
-hml            & -0.0186               \\
-               & (0.0695)              \\
-R-squared      & 0.0063                \\
-R-squared Adj. & -0.0072               \\
+mkt\_rf        & 0.0144                \\
+               & (0.0468)              \\
+smb            & -0.0517               \\
+               & (0.0712)              \\
+hml            & 0.0220                \\
+               & (0.0721)              \\
+R-squared      & 0.0021                \\
+R-squared Adj. & -0.0113               \\
 \hline
 \end{tabular}
 \end{center}
